syntax = "proto3";

package de.zbw.lori.api.v1;

option java_package = "de.zbw.lori.api";
option java_multiple_files = true;

message FullImportRequest {
}

message FullImportResponse {
  int32 items_imported = 1;
}